Fix styling issues
Add custom scrollbar styles, center loading spinner animation, fix temperature meter scaling bug in Safari

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,6 +38,10 @@ main {
 
 header {
 	background-color: $darkblue;
+
+	@media (min-width: 600px) {
+		min-height: 80px;
+	}
 }
 
 .sidebar {
@@ -47,9 +51,28 @@ header {
 	background-color: $darkblue;
 
 	@media (min-width: 600px) {
-		height: 100vh;
+		max-height: 100vh;
 		min-width: 180px;
+		overflow: scroll;
 	}
+}
+
+::-webkit-scrollbar-track {
+	background-color: $darkblue;
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	background-color: $darkblue;
+}
+
+::-webkit-scrollbar-corner {
+	background-color: $darkblue;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: $yellow;
+	border-radius: 3px;
 }
 
 .locations-toggler {
@@ -160,12 +183,11 @@ header {
 
 .map-container {
 	width: 100%;
-	//min-height: 500px;
-	height: 100vw;
+	min-height: 400px;
+	height: calc(100vh - 184px);
 
 	@media (min-width: 600px) {
 		height: 100vh;
-		//min-height: 800px;
 	}
 }
 
@@ -245,6 +267,7 @@ header {
 .temperature {
 	position: relative;
 	height: 10px;
+	min-height: 10px;
 	width: calc(100% - 40px);
 	max-width: 240px;
 	margin: 30px auto;
@@ -512,7 +535,6 @@ header {
 	width: 100%;
 	margin: 0 auto;
 	text-align: center;
-	margin-left: 20px;
 }
 
 .spinner__animation {
